# maritime-pipeline-v2

./: .gitignore  .pre-commit-config.yaml  README.md  [mmsi].md  app.py  dashboard.py  dbt_project.yml  evidence.plugins.yaml  index.md  overview.md  package-lock.json  package.json  packages.yml  pipeline_performance.md  profiles.yml  pyproject.toml  serve_ui.py
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  pipeline.yml
models/gold/: voyages.py
models/silver/: sources.yml  stg_ais.sql
reports/: index.md
src/: config.py  constants.py  datetime_utils.py  extract.py  geospacial.py  ingest_motherduck.py  settings.py  transform.py  upload_artifacts.py  voyage_enrichment.py
tests/: assert_positive_duration.sql  conftest.py  test_extract.py  test_geospacial.py  test_imports.py  test_routing.py  test_transform.py  test_voyages_transformation.py
