[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "maritime-pipeline"
version = "1.0.0"
description = "Maritime data pipeline with AIS ingestion and dbt transformation"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4",
    "dbt-duckdb",
    "duckdb",
    "numpy",
    "pandas",
    "polars",
    "requests",
    "scipy",
    "searoute",
    "zstandard"
]

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "pytest"
]
