[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "maritime-pipeline-v2"
version = "1.0.0"
description = "Maritime data pipeline with AIS ingestion and dbt transformation"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.1",
    "dbt-duckdb>=1.8.0",
    "duckdb==1.4.4",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "polars>=0.20.0",
    "requests>=2.31.0",
    "scipy>=1.17.1",
    "searoute>=1.1.0",
    "zstandard>=0.22.0"
]

[project.optional-dependencies]
dev = [
    "black==24.3.0",
    "flake8==7.0.0",
    "pytest>=8.0.0",
    "isort>=5.13.0",
    "pre-commit>=3.6.0",
]

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
